--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
 .footer {
   background-color: #0d0707;
   color: #f7f4f4;
-  padding: 20px 0;
+  padding: 5px 0;
   position: fixed;
   bottom: 0;
   width: 100%;
@@ -11,21 +11,21 @@
 .footer .container {
   display: flex;
   justify-content: space-between;
-  max-width: 1200px;
+  max-width: 1700px;
   margin: 0 auto;
 }
 
-.footer h4 {
+.footer h2 {
   font-size: 20px; /* Increased font size */
   font-weight: bold; /* Added font weight */
-  margin-bottom: 15px; /* Increased margin */
+  margin-bottom: 5px; /* Increased margin */
   color: #fff; /* Set color to white */
   text-transform: uppercase; /* Uppercase text */
   letter-spacing: 1px; /* Added letter spacing */
 }
 
 /* Centering everything under h4 tags */
-.footer .col-md-4 {
+.footer .col-md-6 {
   text-align: center;
 }
 /* Updated styles for NavLink */
@@ -33,4 +33,13 @@
   color: #fff;
   text-decoration: none;
   display: block; /* Ensure each NavLink is displayed on a new line */
+}
+img {
+  align-items: center;
+	display: flex;
+  justify-content: center;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100%;
 }
